@@ -1,3 +1,8 @@
+2003-05-01    John E. Joganic <john@joganic.com>
+
+	* Changed Graphire from absolute wheel to relative.
+	* Moved throttle position check out of Suppress.  Need it elsewhere.
+
 2003-04-29    John E. Joganic <john@joganic.com>
 
 	* Expanded graphire parsing; all devices use same data path
